<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/startImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/libraryPhotoDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.080"
        app:srcCompat="@drawable/giris_gorsel"
        tools:srcCompat="@drawable/giris_gorsel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailWrapper"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startImage"
        app:layout_constraintVertical_bias="0.093" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:fontFamily="@font/comfortaa_light"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColorHighlight="@color/axen_red"
            android:textColorLink="@color/axen_red"
            android:backgroundTint="@color/transparent">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordWrapper"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailWrapper"
        app:layout_constraintVertical_bias="0.075"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:backgroundTint="@color/transparent"
            android:ems="10"
            android:fontFamily="@font/comfortaa_light"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHighlight="@color/axen_red"
            android:textColorHint="#757575"
            android:textColorLink="@color/axen_red">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/axen_red"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/login_btn"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordWrapper"
        app:layout_constraintVertical_bias="0.109" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupLoginBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/axen_red"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/signup_btn"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.094" />

</androidx.constraintlayout.widget.ConstraintLayout>