<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        app:srcCompat="@drawable/giris_gorsel" />

    <TextView
        android:id="@+id/emailVerificationText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/emailverificationtext"
        style="@style/customTextLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.08" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/emailVerificationBtn"
        android:layout_width="@dimen/btnwidth"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:textStyle=""
        android:text="@string/emailverificationbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailVerificationText"
        app:layout_constraintVertical_bias="0.407" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/emailVerificationSendMail"
        android:layout_width="@dimen/btnwidth"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/emailverificationSendMail"
        android:textStyle=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailVerificationBtn"
        app:layout_constraintVertical_bias="0.366" />
</androidx.constraintlayout.widget.ConstraintLayout>